2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* make.bat (REM FIXME): Remove mention of outdated w3.

	* aclocal.m4 (AC_EMACS_CHECK_LIB): Remove checks for w3 and url.  w3 is
	outdated, and all Emacs versions Ma Gnus builds against has url.el.

2013-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* configure.in: Work for term-mode running in Emacs.

2011-11-20  Paul Eggert  <eggert@cs.ucla.edu>

	* etc/gnus/news-server.ast (Setting up the news server name and port
	number): Spelling fix.

2011-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	* etc/gnus-tut.txt (<lars-doc6@eyesore.no>): Spelling fix.

2011-04-07  David Engster  <dengste@eml.cc>

	* Makefile.in (check): New rule for starting test-suite.

2011-04-06  David Engster  <dengste@eml.cc>

	* Makefile.in (lick-fail-on-warning): New rule to compile with warnings
	as errors.
	(fail-on-warning): Use it.

2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* Makefile.in (warn): Add a dummy "warn" target.

2010-10-21  Julien Danjou  <julien@danjou.info>

	* todo: Remove done and duplicate items.

2010-10-06  Julien Danjou  <julien@danjou.info>

	* todo: Remove other broken links

	* make.bat: Remove Windows 98 stuff and reference to my.gnus.org.

2010-10-04  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in: Fix help strings.

2010-04-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* .gitignore: Remove configure from ignores.

2010-04-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* configure: Regenerated from configure.in using Autoconf 2.65.

2009-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* GNUS-NEWS: Generated.

2009-01-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* .dir-locals.el: New file.

2009-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Add outline.  Clarify Emacs versions.

2008-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* README: Bump version to 0.11

2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (release-check-settings): Clarify codename.
	(release-help): New target.