@@ -29,4 +29,24 @@ AC_PATH_INFO_DIR
 AC_SET_BUILD_FLAGS
 GNUS_CHECK_FONTS
 
+AC_PATH_PROG(GZIP_PROG, gzip)
+AC_ARG_WITH(compress-install,
+	[AS_HELP_STRING([[--without-compress-install]],
+		[do not compress .el and .info files when installing.])],
+	[ if test "${withval}" = no; then
+		COMPRESS_INSTALL=no;
+	  else
+		if test -n "${GZIP_PROG}"; then
+			COMPRESS_INSTALL=yes;
+		else
+			COMPRESS_INSTALL=no;
+		fi;
+	  fi ],
+	[ if test -n "${GZIP_PROG}"; then
+		COMPRESS_INSTALL=yes;
+	  else
+		COMPRESS_INSTALL=no;
+	  fi ])
+AC_SUBST(COMPRESS_INSTALL)
+
 AC_OUTPUT(Makefile etc/Makefile lisp/Makefile texi/Makefile texi/gnusconfig.tex texi/ps/Makefile)
