@@ -1,3 +1,15 @@
+2014-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* Makefile.in (.texi, makeinfo): Don't split info files.
+	(install): Compress info files.
+	(uninstall): Remove compressed info files.
+	(gnus-manual-a4.ps.gz, gnus-manual-standard.ps.gz): Use GZIP_PROG.
+
+	* infohack.el (infohack): Don't split info files.
+
+	* gnus.texi (Ma Gnus): Mention that Lisp source files and info files
+	to be installed will be compressed by gzip by default.
+
 2014-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	Add .info extension to info files.
